more experimentation with toolchains and platforms

--- a/bzl/toolchain/BUILD.bazel
+++ b/bzl/toolchain/BUILD.bazel
@@ -2,7 +2,7 @@ load("@bazel_skylib//rules:common_settings.bzl",
      "bool_flag", "bool_setting",
      "string_flag", "string_setting")
 
-# load(":BUILD.bzl", "bootstrap_toolchain_impl")
+# load(":BUILD.bzl", "boot_toolchain_impl")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -52,12 +52,12 @@ toolchain_type(
 )
 
 ################
-# bootstrap_toolchain_impl(  ## adapter
+# boot_toolchain_impl(  ## adapter
 #     name = "bootstrap_tc_macos",
 #     linkmode = "dynamic",
 # )
 
-# bootstrap_toolchain_impl(
+# boot_toolchain_impl(
 #     name = "bootstrap_tc_macos_native",
 #     ocamlc = "//:ocamlopt",
 #     linkmode = "dynamic",
