--- a/platforms/BUILD.bazel
+++ b/platforms/BUILD.bazel
@@ -1,9 +1,58 @@
-# generated file - DO NOT EDIT
-
 exports_files(["BUILD.bazel"])
 
 package(default_visibility = ["//visibility:public"])
 
+################################################################
+#### local cross-compilation target platforms
+# inherit from local config platform, so runtime always matches local
+# platform.
+
+platform(name = "sys_vm_vm",    # ocamlc.byte
+         parents = ["@local_config_platform//:host"],
+         exec_compatible_with = [
+             # not compatible with //platforms:boot?
+             "//platforms:vm?", "//platforms:sys?"
+
+         ],
+         constraint_values = [
+             # "@platforms//os:linux", "@platforms//cpu:x86_64",
+             "//platforms/ocaml/executor:vm?",
+             "//platforms/ocaml/emitter:vm?"])
+
+platform(name = "sys_vm_sys",   # ocamlopt.byte
+         parents = ["@local_config_platform//:host"],
+         constraint_values = [
+             # "@platforms//os:linux", "@platforms//cpu:x86_64",
+             "//platforms/ocaml/executor:vm?",
+             "//platforms/ocaml/emitter:sys?"])
+
+platform(name = "sys_sys_sys",   # ocamlopt.opt
+         parents = ["@local_config_platform//:host"],
+         constraint_values = [
+             # "@platforms//os:linux", "@platforms//cpu:x86_64",
+             "//platforms/ocaml/executor:sys?",
+             "//platforms/ocaml/emitter:sys?"])
+
+platform(name = "sys_sys_vm",   # ocamlc.opt
+         parents = ["@local_config_platform//:host"],
+         constraint_values = [
+             # "@platforms//os:linux", "@platforms//cpu:x86_64",
+             "//platforms/ocaml/executor:sys?",
+             "//platforms/ocaml/emitter:vm?"])
+
+################################################################
+#### cross-platform cross-compilation
+# targeting a system other than the local host
+
+platform(name = "linux_amd64_vm_vm", # ocamlc.byte on amd64 runtime
+         parents = ["@local_config_platform//:host"],
+         constraint_values = [
+             "@platforms//os:linux", "@platforms//cpu:x86_64",
+             "//platforms/ocaml/executor:vm",
+             "//platforms/ocaml/emitter:vm"])
+
+
+################################################################
 constraint_setting(name = "platform",
                    default_constraint_value = ":boot?")
 
